# candle-moe

./: Cargo.toml  README.md  build.rs  candle_moe.copy.patch  candle_moe.patch
benches/: bench_fused_moe.rs  bench_topk_softmax.rs
kernels/: common.cuh  fused_moe.cu  nomic_moe.cu  preprocessing.cuh  qwen3_moe.cu  topk_softmax.cu
src/: ffi.rs  lib.rs
tests/: moe_tests.rs
