[package]
name = "candle-moe"
version = "0.0.1"
edition = "2024"

description = "fused MoE layer for the candle ML framework."
keywords = ["tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["cuda-11"]
# Use cuda-12 for candle 0.9+ with cudarc 0.16+ (new API)
# Use cuda-11 for older candle versions (pre-0.9) with older cudarc API
cuda-12 = []
cuda-11 = []

[dependencies]
candle = { version = ">=0.1", package = "candle-core", features = ["cuda"] }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = "0.1.5"

[dev-dependencies]
anyhow = { version = "1" }
candle-nn = { version = "0.8", features = ["cuda"] }
candle-transformers = { version = "0.8" }

[profile.release]
lto = "fat"
codegen-units = 1
